location: continue integration of gRPC
