# services/location/api/http/v1/swagger.json
@@ -162,7 +162,7 @@
                         "name": "name",
                         "in": "body",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.UpdateCategory"
                         }
                     }
                 ],
@@ -396,27 +396,12 @@
                         "required": true
                     },
                     {
-                        "description": "Location name",
-                        "name": "name",
+                        "description": "Updated location",
+                        "name": "location",
                         "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Location address",
-                        "name": "address",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Location category",
-                        "name": "category_id",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.UpdateLocation"
                         }
                     }
                 ],
@@ -611,6 +596,40 @@
                     "description": "User ID. Owner of the location.",
                     "type": "string",
                     "x-order": "5",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                }
+            }
+        },
+        "models.UpdateCategory": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "Short descriptive name of the category, like \"Homes\" or \"Sport\".",
+                    "type": "string",
+                    "x-order": "1",
+                    "example": "Homes"
+                }
+            }
+        },
+        "models.UpdateLocation": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "Short descriptive name of the location, like \"Home\" or \"Work\".",
+                    "type": "string",
+                    "x-order": "1",
+                    "example": "Home"
+                },
+                "address": {
+                    "description": "Full address of the location. Should contains at least street, postal code and city.",
+                    "type": "string",
+                    "x-order": "2",
+                    "example": "1 rue de la Poste, 75001 Paris"
+                },
+                "category_id": {
+                    "description": "Location category foreign key.",
+                    "type": "string",
+                    "x-order": "3",
                     "example": "550e8400-e29b-41d4-a716-446655440000"
                 }
             }
